<resources>

    <!-- Common -->
    <string name="appName">Taskallo</string>

    <string name="image_des">图片描述信息</string>

    <string name="back">返回</string>
    <string name="more">更多</string>
    <string name="game">游戏</string>
    <string name="video">视频</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="help">帮助</string>
    <string name="rank">排行榜</string>


    <!-- 网络请求时的URL地址 -->
    <string name="url_update">http://192.168.0.233:10004/app/querycurrentappversion</string>

    <!-- 底部菜单-->
    <string name="menu_home">首页</string>
    <string name="menu_game">游戏</string>
    <string name="menu_video">视频</string>
    <string name="menu_manager">本地</string>

    <string name="but_comein">立即使用</string>
    <string name="skip_ad">跳过广告</string>

    <!-- 注册登录 -->
    <string name="login_now">登录</string>
    <string name="login_name_hint">邮箱/手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_other">使用更多方式登录</string>

    <string name="find_pwd">找回密码</string>
    <string name="find_now">立即找回</string>
    <string name="find_new"><font size="15">请输入6-16位新密码</font></string>

    <string name="register_title">注册</string>
    <string name="register_mobile"><font size="15">输入手机号/邮箱</font></string>
    <string name="register_captcha"><font size="15">输入验证码</font></string>
    <string name="register_get_captcha">获取验证码</string>
    <string name="register_password"><font size="15">输入6-16位密码</font></string>
    <string name="register">立即注册</string>
    <string name="register_text">注册代表您同意</string>
    <string name="register_protocol"><font size="12">《Taskallo用户隐私协议》</font></string>

    <!-- 侧滑菜单 -->
    <string name="sliding_un_login">未登录</string>
    <string name="sliding_wonderful">登录后享更多精彩</string>
    <string name="sliding_feedback">意见反馈</string>
    <string name="sliding_about">关于</string>

    <!-- 下载更新 -->
    <string name="update">更新</string>
    <string name="update_check">检测更新</string>
    <string name="update_find_new">发现新的版本 V1.0.1</string>
    <string name="update_ing">更新中：</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">不升级</string>
    <string name="update_cancel">取消</string>
    <string name="update_background">后台运行</string>
    <string name="update_goon">继续更新</string>
    <string name="download">下载</string>

    <!-- Game相关 -->
    <string name="game_detail">详情</string>
    <string name="game_review">评论</string>
    <string name="game_key">键位</string>
    <string name="game_strategy">必读</string>
    <string name="game_summary">简介</string>
    <string name="game_info">游戏信息</string>
    <string name="game_version">版本信息：</string>
    <string name="game_time">更新时间：</string>
    <string name="game_content">更新内容</string>
    <string name="game_company">开发商：</string>
    <!-- 手柄游戏相关 -->
    <string name="game_sb">手柄游戏</string>
    <string name="game_cp">触屏游戏</string>

    <!-- game圈 -->
    <string name="game_hub_jubao">举报</string>
    <string name="game_hub_detail">帖子详情</string>
    <string name="game_hub_eygs">恶意灌水</string>
    <string name="game_hub_ggzp">广告诈骗</string>
    <string name="game_hub_yhsq">淫秽色情</string>
    <string name="game_hub_other">其他原因</string>
    <string name="game_hub_submit">提交</string>
    <string name="game_hub_choose_module">选择板块</string>
    <string name="game_hub_choose_game">选择游戏</string>
    <string name="game_hub_choose_game_expl">&#160;&#160;&#160;&#160;。</string>
    <string name="game_hub_no_find">没找到自己喜欢的游戏？</string>
    <string name="game_hub_click_hear">点击这里</string>
    <string name="game_hub_sub_name">提交游戏名字</string>

    <!-- Manager相关 -->
    <string name="manage_history">历史记录</string>
    <string name="manage_download">下载记录</string>
    <string name="manage_contact">联系我们</string>
    <string name="manage_setting">系统设置</string>
    <string name="manage_disclaimer">免责声明</string>

    <!-- 用户中心相关 -->
    <string name="user_info">账号信息</string>
    <string name="user_photo">头像</string>
    <string name="user_nick_name">我的昵称</string>
    <string name="user_level">我的等级</string>
    <string name="user_nb">我的N币</string>
    <string name="user_level_nb">等级与N币</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="user_address">地址</string>
    <string name="user_logout">退出登录</string>

    <!-- VR视频相关 -->
    <string name="vr_video">VR视频</string>
    <string name="vr_game">VR游戏</string>
    <string name="vr_3d_move">3D电影</string>

    <!-- 评论相关 -->
    <string name="review">评论</string>

    <!-- 搜索相关 -->
    <string name="search">搜索</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_ing">正在搜索...</string>
    <string name="search_end">未搜索到相关内容</string>

    <!-- 网络加载相关 -->
    <string name="loading">玩命加载中...</string>
    <string name="load_end">加载失败，稍后重试</string>
    <string name="reload">重新加载</string>

    <!-- About相关 -->
    <string name="about">关于</string>
    <string name="about_code">Taskallo 1.01</string>
    <string name="about_copyright">Taskallo 版权所有(c)</string>

    <!-- 免责声明 相关 -->
    <string name="disclaimer">免责声明</string>

    <!-- 联系我们 相关 -->
    <string name="contact_us">联系我们</string>
    <string name="contact_phone">-</string>
    <string name="contact_email"></string>
    <string name="contact_address">武汉市洪山区广八路天宝佳苑C座</string>

    <!--公司信息-->
    <string name="company_ad_email">yunlong@iningmei.com</string>
    <string name="company_ad_phone">13035114192</string>
    <!-- 意见反馈相关 -->
    <string name="feedback">意见反馈</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_hint">请输入您遇到的问题或者建议...</string>
    <string name="feedback_contact">联系方式</string>
    <string name="feedback_submit">提交反馈</string>

    <string name="game_review_btn_text">评论</string>

    <!-- OTA升级 相关 -->
    <string name="ota_device">我的设备</string>

    <!-- 手柄助手 相关 -->
    <string name="pad_mapping_sprite">映射精灵</string>
    <string name="pad_mapping_sprite_ngame">映射精灵</string>
    <string name="pad_download">下载</string>
    <string name="pad_tool_desc">
     ""
    </string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pushmsg_center_no_more_msg">已经到底了哦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">上次刷新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在刷新…</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label_fan">@string/pull_to_refresh_header_hint_loading</string>
    <string name="no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络繁忙，请稍候重试</string>
    <string name="no_network">网络异常,请检查网络设置</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="see_more">查看全部</string>
    <string name="Account">账号：</string>
    <string name="requery_failed">请求失败,稍后重试</string>
    <string name="server_exception">服务器繁忙,请稍后再试</string>
    <string name="server_exception_2_pullrefresh">服务器繁忙,请稍后再试~</string>
    <string name="game_hub">圈子</string>
    <string name="download_count_end">下载</string>
    <string name="unlogin_msg">您还未登录哦~\n登录后发现更多精彩！</string>
    <string name="relogin_msg">"您的登录状态已经失效\n请重新登录"</string>
    <string name="unkonw">--</string>
    <string name="to_precent">提交评分</string>
    <string name="precented">已评分</string>
    <string name="open">打开</string>
    <string name="no_data">查询无结果</string>
    <string name="read_1">1.当游戏的标签有“云适配”标签</string>
    <string name="read_text1">当游戏有“云适配”的标签时，该游戏为云适配版本游戏。安装前请先删除手机上的官方版本，再安装云适配版，游戏按键默认已经调整完美，需要按照自己习惯调整的请打开映射设置。</string>
    <string name="read_2">2.当游戏的标签有“原生手柄”标签</string>
    <string name="read_text2">当游戏有“原生手柄”的标签时，无法调出映射。</string>
    <string name="read_3">3.云适配游戏调出映射</string>
    <string name="read_text3">当游戏有“云适配”的标签时，该游戏为云适配版本游戏。如何调出映射：“i”键或Start+LB或start+select或back等按键，请根据不同型号手柄使用不同的方式。</string>
    <string name="read_4">4.云适配游戏映射异常</string>
    <string name="read_text4">部分游戏无法映射请按home键回到桌面，再进游戏即可呼出映射。</string>
    <string name="read_5">5.调出键盘异常说明</string>
    <string name="read_text5">关于部分手机使用手柄后调不出键盘，无法打字的情况，是因为手柄占用了键盘协议， 请断开手机蓝牙，打字后，再开启手机蓝牙，手柄自动回连。</string>
    <string name="necessary_content_desc">拇指玩的安装器,一键操作.安装指南:谷歌框架指的是谷歌服务框架,谷歌应用商店等4个谷歌出品的APP,是使用谷歌服务的基础.</string>
    <string name="cancel_like_msg">主人~不再喜欢了我\n我将从"喜欢"列表消失~</string>
    <string name="install_apk_lost_redownload">安装包文件丢失\n请重新下载</string>
    <string name="ok">好的</string>
    <string name="main_bottom_tab_01">通知</string>
    <string name="share_description">Taskallo！</string>
    <string name="app_download_url_yyb">http://sj.qq.com/myapp/detail.htm?apkName=com.android.taskallo</string>
    <string name="alipay_redpackage_content">7Dl59e13pi</string>
    <string name="fogote_pwd">忘记密码?</string>
    <string name="main_top_title_tab_1">看板</string>
    <string name="main_bottom_tab_02">我的</string>
    <string name="main_bottom_tab_0">项目</string>
    <string name="phone">电话</string>
    <string name="no_edited_yet">未填写</string>
    <string name="email">邮箱</string>
    <string name="me_sync">同步</string>
    <string name="team">团队</string>
    <string name="change_pwd">修改密码</string>
    <string name="clean_cache">清除缓存</string>
    <string name="other">其他</string>
    <string name="privacy">隐私条款</string>
    <string name="share">分享此应用</string>
    <string name="look_board">看板</string>
    <string name="me_profile">个人资料</string>
    <string name="nick_name">昵称</string>
    <string name="choose_from_loc_pic">从相册选择</string>
    <string name="save">保存</string>
    <string name="enter_account">输入账号</string>
    <string name="all_msg">全部通知</string>
    <string name="unRead_msg">未读通知</string>
    <string name="query_by_project">按项目查询</string>
    <string name="project_add">创建项目</string>
    <string name="enter_project_name">请输入项目名称</string>
    <string name="enter_proj_subtitle_optional">项目副标题 (选填)</string>
    <string name="proj_open_ness">项目公开性</string>
    <string name="str_public">公开</string>
    <string name="primary_cover">预选封面</string>
    <string name="str_private">私有</string>
    <string name="enter_cannot_empty">输入内容不能为空</string>
    <string name="proj_cannot_empty">项目名不能为空</string>
    <string name="create_proj_success">项目创建成功</string>
    <string name="create_proj_faild">项目创建失败,稍后重试</string>
    <string name="get_img_faild">获取背景图失败</string>
    <string name="card_title">卡片标题</string>
    <string name="list_title">列表标题</string>
    <string name="fragment_opened">展开</string>
    <string name="fragment_closed">收起</string>
    <string name="on_list">在列表</string>
    <string name="zhong">中</string>
    <string name="add_card_describe">添加卡片描述</string>
    <string name="this_colum_to_finished_filed">此列归档到\"已完成\"</string>
    <string name="delete_faild">删除失败</string>
    <string name="open_file"><u>在...中打开</u></string>
</resources>
