<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ngame="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.android.taskallo.view.BaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/app_title_height"
        ngame:left_but_visable="true"
        ngame:title_size="@dimen/title_size"
        ngame:title_text="@string/find_pwd" />


    <EditText
        android:layout_marginTop="@dimen/dm040"
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@null"
        android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
        android:hint="@string/register_mobile"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
        android:maxLength="30"
        android:singleLine="true"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/font_default"
        android:textSize="@dimen/dm028" />

    <include layout="@layout/layout_login_line_cccccc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm088"
            android:background="@null"
            android:hint="@string/register_captcha"
            android:inputType="number"
            android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
            android:maxLength="4"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/font_default"
            android:textSize="@dimen/dm028" />

        <TextView
            android:id="@+id/tv_captcha"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/shape_bg_verif_code_bt_send"
            android:gravity="center"
            android:text="@string/register_get_captcha"
            android:textColor="@color/fefefe"
            android:textSize="@dimen/dp_10" />

    </RelativeLayout>


    <include layout="@layout/layout_login_line_cccccc" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
    >

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm088"
            android:background="@null"
            android:hint="@string/find_new"
            android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/font_default"
            android:textSize="@dimen/dm028" />

        <ImageButton
            android:id="@+id/bt_show_pwd"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_22"
            android:background="@drawable/selector_ic_open_or_close"
            android:scaleType="centerInside" />

    </RelativeLayout>
    <include layout="@layout/layout_login_line_cccccc" />
    <Button
        android:id="@+id/bt_find_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm070"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
        android:layout_marginTop="@dimen/dm050"
        android:background="@drawable/selector_register_bt"
        android:onClick="onLoginClick"
        android:text="@string/find_now"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16" />

</LinearLayout>