<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ngame="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f5f5f5"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_left_center" />

    <RelativeLayout
        android:id="@+id/img_photo_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm140"
        android:layout_marginTop="@dimen/dm020"
        android:background="@drawable/selector_bg_white_f2"
        android:paddingLeft="@dimen/dm028">

        <TextView
            style="@style/style_24_333333_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_photo" />

        <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_photo"
            android:layout_width="@dimen/dm100"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dm028"
            android:layout_height="@dimen/dm100"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            fresco:actualImageScaleType="centerInside"
            fresco:failureImage="@drawable/ic_def_logo_188_188"
            fresco:placeholderImage="@drawable/ic_def_logo_188_188"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:progressBarImage="@drawable/ic_def_logo_188_188"
            fresco:roundAsCircle="true" />

    </RelativeLayout>


    <!--昵称-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm072"
        android:background="@drawable/selector_bg_white_f2"
        android:paddingLeft="@dimen/dm028">

        <TextView
            style="@style/style_24_333333_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nick_name" />

        <EditText
            android:id="@+id/tv_nickname"
            style="@style/style_20px_808080"
            android:layout_width="@dimen/dm450"
            android:textCursorDrawable="@drawable/shape_cursor_color"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:clickable="true"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingRight="@dimen/dm028" />

        <include layout="@layout/layout_line_1px_f0f0f0" />
    </RelativeLayout>
    <!--电话-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm072"
        android:background="@drawable/selector_bg_white_f2"
        android:onClick="onProfilePhoneBtClick"
        android:paddingLeft="@dimen/dm028">

        <TextView
            style="@style/style_24_333333_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/style_20px_808080"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:paddingRight="@dimen/dm028" />

        <include layout="@layout/layout_line_1px_f0f0f0" />
    </RelativeLayout>
    <!--邮箱-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm072"
        android:background="@drawable/selector_bg_white_f2"
        android:onClick="onProfileEmailBtClick"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dm028">

        <TextView
            style="@style/style_24_333333_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email" />

        <TextView
            android:id="@+id/profile_email_tv"
            style="@style/style_20px_808080"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:paddingRight="@dimen/dm028" />

        <include layout="@layout/layout_line_1px_f0f0f0" />
    </RelativeLayout>

    <include layout="@layout/layout_line_1px_f0f0f0" />


</LinearLayout>